fixed spacing

--- a/css/indexstylesheet.css
+++ b/css/indexstylesheet.css
@@ -1,5 +1,18 @@
+
+
 body {
     background: lightgreen;
+	position:relative;
+
+.fixed-width .container {
+    width: 960px;
+    margin: 0 auto;
+}
+.fluid-layout .container {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 2%;
 }
 
 h1 {
@@ -47,4 +60,19 @@ text-align:center;
 font-family: 	"Arial","Verdana", Sans-serif;
  border: 2px solid;
  padding: 10px;
+}
+.container {
+    width: 960px;
+    margin: 0 auto;
+}
+body {
+    font-size: 1rem;
+    max-width: 1200px;
+}
+@font-face {
+  font-family: RoboFont;
+  src: url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+}
+a {
+ font-family: RoboFont;
 }
